# robokin

./: .gitignore  README.md  pyproject.toml
examples/helpers/: README.md  so101_lerobot.py
examples/placo/: README.md  go_to_pose.py  interactive_ik.py  lerobot_real_arm.py  pose_cycle.py  rerun_loop.py  ros2_real_arm.py
examples/pyroki/: README.md  go_to_pose.py  interactive_ik.py  lerobot_real_arm.py  pose_cycle.py
examples/roboplan/: README.md  interactive_ik.py
src/robokin/: __init__.py  motion_planner.py  placo.py  pyroki.py  roboplan_oink.py  robot_model.py  trajectory_executor.py  transformations.py
src/robokin/pyroki_snippets/: __init__.py  _online_planning.py  _solve_ik.py  _solve_ik_vel_cost.py  _solve_ik_vel_cost_with_collision.py  _solve_ik_with_base.py  _solve_ik_with_collision.py  _solve_ik_with_manipulability.py  _solve_ik_with_multiple_targets.py  _trajopt.py
src/robokin/ui/: __init__.py  rerun_logger.py  viser_app.py  viser_utils.py
tests/: test_import.py  test_placo.py  test_roboplan_oink.py  test_transformations.py
